--- a/estilos/cabecera.css
+++ b/estilos/cabecera.css
@@ -1,52 +1,94 @@
-#About{
+.header{
     width: 100%;
-    height: 91vh;
-    display: grid;
-    place-content: center;
-    background:#f2f2f2;
+    height: 517.24px;
+    padding-top: 100px;
 }
-.about-me{
-    width: fit-content;
-    margin: 0 auto;
-    display: flex;
-    gap: 100px;
-}
-.card{
-    width: 400px;
-}
-.social-icons{
+.contenedor{
     width: 100%;
-    height: 34px;
     display: flex;
+    justify-content: space-evenly;
     align-items: center;
-    gap: 20px;
 }
-.custom-icon {
+.perfil{
+    width: 778px;
+    height: 495px;
+}
+.saludo{
+    width: 89px;
+    height: 26px;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 26px;
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
+}
+.name{
+    width: 283px;
+    height: 38px;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
     font-size: 26px;
-    color: #000;
-  }
-@media screen and (max-width: 600px) {
-    #About{
-        width: fit-content;
-        height: fit-content;
-        display: flex;
-        flex-direction: column;
-    }
-    .about-me{
-        flex-direction: column;
-        gap: 10px;
-    }
-    .card{
-        width: 100%;
-    }
-    .social-icons{
-        width: 100%;
-        height: 80px;
-        display: flex;
-        align-items: center;
-        gap: 30px;
-    }
-    .custom-icon {
-        font-size: 36px;
-      }
+    line-height: 38px;
+    letter-spacing: 0.03em;
+    color: #FD6F00;
+}
+.deveF{
+    width: 488px;
+    height: 30px;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 100px;
+    line-height: 0;
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
+    margin:  55px 10px;
+}
+.second{
+    margin: 20px;
+    margin-left: 50%;
+}
+.parrafo{
+    width: 698px;
+    height: 101px;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 32px;
+    text-align: justify;
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
+}
+.hireMe{
+    width: fit-content;
+    height: 52px;
+    background: #FD6F00;
+    border: none;
+    border-radius: 5px;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 32px;
+    text-align: justify;
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
+}
+.foto{
+    z-index: -100;
+}
+.rectangulo{
+    position: relative;
+    width: 374px;
+    height: 83px;
+    left: 0px;
+    top: 150px;
+    background: rgba(253, 111, 0, 0.6);
+}
+main{
+    height: 100vh;
 }
