--- a/estilos/general.css
+++ b/estilos/general.css
@@ -1,6 +1,9 @@
 @import url(./navegacion.css);
 @import url(./cabecera.css);
+@import url(./about.css);
+@import url(./services.css);
 body{
+    width: 100%;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
