--- a/estilos/navegacion.css
+++ b/estilos/navegacion.css
@@ -1,103 +1,216 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
-.nav{
+#nav {
+  width: 100%;
+  height: 67px;
+  box-sizing: border-box;
+  background-color: none;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 10px;
   position: fixed;
-  background-color: #1E1E1E;
   top: 0;
-  left: 0;
-  width: 100%; 
-  height: 67px;
-  border-bottom: 1px solid #010101;
+  z-index: 9;
+  background-color: #1E1E1E;
 }
-.container{
+#nav h1{
+  font-size: 28px;
+  color: #fff;
+}
+.menu {
+  width: 600px;
+  height: fit-content;
+  padding-top: 0;;
   display: flex;
+  justify-content: space-around;
   align-items: center;
-  justify-content: space-evenly;
+  list-style-type: none;
 }
-.logo{
-  width: fit-content;
-  height: 67px;
-  display: flex;
-  align-items: center;
-  color: #FBFBFB;
-  font-family: 'Montserrat';
-  font-size: 24px;
+.menu li a {
+  text-decoration: none;
+  color: #ffff;
+  font-size: 21px;
+  transition: color 0.9s ease;
 }
-.img{
-  width: 26px;
-  object-fit: cover;
-}
-.logo> span::first-letter{
-  margin-left: 20px;
-  font-weight: bold;
+.menu li a:hover{
+  color: #FD6F00;
 }
 
-.menu{
-  width: 807px;
-  height: 52px;
-  display: flex;
-  align-items: center;
-  gap: 21px;
+.burger-menu {
+  display: none;
+  cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
+  -moz-tap-highlight-color: transparent;
+  -ms-tap-highlight-color: transparent;
 }
-.burguer{
+
+.bar {
+  width: 25px;
+  height: 3px;
+  background-color: #fff;
+  margin: 5px 0;
+}
+.btn{
+  width: auto;
+  height: 42px;
+  border-radius: 8px;
+  font-size: 18px;
+  cursor: pointer;
+}
+.btn {
+  width: 30%;
+  height: 40px;
+  background-color: #FD6F00;
+  border: none;
+  border-radius: 30px;
+  color: #fff;
+  font-weight: bold;
+  font-size: 1.2em;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.btn:hover {
+  background-color: #FDB600;
+}
+.exit{
   display: none;
 }
-.caja{
-  width: max-content;
-  height: 52px;
-  display: grid;
-  align-items: center;
-}
-.caja> a{
-  font-size: 18px;
-  font-family: 'Poppins';
-  text-decoration: none;
-  color: #ffffff;
-}
-.cv{
-  display: grid;
-  place-content: center;
-}
-.cv>button{
-  width: 138px;
-  height: 42px;
-  border: none;
-  border-radius: 5px;
-  background-color: #FD6F00;
-  color: #FBFBFB;
-  font-size: 16px;
-  font-family: 'Poppins';
-  letter-spacing: 3%;
-}
-@media (max-width: 576px) {
-  .nav {
-    width: 100px;
-  }
-  .container {
-    width: 100%;
+/* Estilos para teléfonos */
+@media (max-width: 768px) {
+  #nav {
     justify-content: space-between;
+    height: fit-content;
   }
-  .burguer{
-    width: auto;
+
+  #userName h1 {
+    font-size: 1.4em;
+  }
+
+  .menu {
+    display: none;
+    padding-top: 0;
+  }
+
+  .burger-menu {
+    display: block;
+  }
+
+  .active {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: #222;
     display: flex;
     flex-direction: column;
-    height: max-content;
-    gap: 5px;
+    justify-content: center;
+    align-items: center;
+    padding: 0px;
+    margin: 0;
+    gap: 40px;
+    z-index: 1;
+    overflow-y: scroll;
   }
-  .burguer-line{
-    width: 23px;
-    height: 1px;
-    background-color: #fff;
+
+  .menu li {
+    width: 80%;
+    height: 40px;
+    background-color: #333;
+    padding: 15px 20px;
+    opacity: 1;
+    text-align: center;
+    line-height: 40px;
+    transition: background-color 0.3s ease;
   }
-  .menu{
-    width: 0px;
-    display: none;
+
+  .menu li:hover {
+    background-color: #FD6F00;
+    transform: scale(1.1);
   }
-  .logo{
-    width: fit-content;
+  .menu li a:hover{
+    color: #333;
   }
-  .logo>img{
-    display: none;
+
+  .btn {
+    width: 90%;
+    height: 60px;
+  }
+
+  .exit {
+    display: block;
+    position: absolute;
+    top: 6%;
+    right: 10%;
+    cursor: pointer;
+  }
+  svg{
+    color: #fff;
+  }
+  svg:hover{
+    transform: scale(1.1);
   }
 }
+
+/* Estilos para tabletas */
+@media (min-width: 769px) and (max-width: 1024px) {
+  #nav {
+    justify-content: space-between;
+    height: fit-content;
+  }
+
+  #userName h1 {
+    font-size: 1.4em;
+  }
+
+  .burger-menu {
+    display: none;
+  }
+
+  .menu {
+    height: fit-content;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 10px;
+  }
+  .menu li {
+    width: 80%;
+    height: 40px;
+    background-color: none;
+    padding: 0;
+  }
+  .menu li a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
+    color: #333;
+    transition: color 0.3s ease;
+  }
+  
+  .menu li:hover a {
+    color: #FD6F00;
+  }
+
+  .btn {
+    width: fit-content;
+    height: 40px;
+    background-color: #FD6F00;
+    border: none;
+    border-radius: 30px;
+    color: #fff;
+    padding: 0 15px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    font-size: 1em;
+  }
+
+  .btn:hover {
+    background-color: #FDB600;
+  }
+}
+
