--- a/estilos/about.css
+++ b/estilos/about.css
@@ -1,140 +1,49 @@
-#aboutMe{
-    width: 100%;
-    height: 100vh;
+#About{
+    width: 90%;
+    height: max-content;
+    margin: 0 auto;
     display: flex;
-    justify-content: space-evenly;
+    flex-direction: row;
     align-items: flex-start;
-    flex-wrap: wrap;
-    padding-top: 70px;
+    gap: 50px;
+
 }
-.carrusel-container{
-    width: 500px;
+.pareja{
+    width: 566px;
     height: 529px;
 }
-.carrusel-container>img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.pareja:first-child{
+    border-radius: 50px;
 }
 .presentacion{
-    width: 562px;
-    height: 529px;
+    width: 50%;
+    height: max-content;
 }
-.presentacion >h4{
-    margin-top: 0;
-    margin-bottom: 0px;
-    width: 100%;
+.presentacion>h2{
     height: fit-content;
+    margin: 0;
+    font-size: 45px;
     font-family: 'Poppins';
-    font-style: normal;
     font-weight: 600;
-    font-size: 50px;
-    color: #FFFFFF;
+    color: #fff;
 }
-.presentacion>p{
-    width: 100%;
-    height: fit-content;
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 21px;
-    text-align: justify;
-    line-height: 32px;
-    letter-spacing: 0.1em;
-    color: #FFFFFF;
-}
-.skills{
-    width: 758px;
-    height: 349px;
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    justify-content: flex-start;
-}
-.skill>P{
-    height: fit-content;
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 600;
+.presentacion >p{
+    color: #FFF;
     font-size: 16px;
-    line-height: 16px;
-    letter-spacing: 0.03em;
-    color: #FFFFFF;
+    font-family: 'Poppins';
+    letter-spacing: 0.63px;
+    text-align: justify;
 }
-.skill>.line{
-    display: flex;
-    width: 100%;
-    height: 12px;
-    background-color: #FFFFFF;
-    border-radius: 10px;
-}
-.line>.line-orange{
-    width: 90%;
-    height: 12px;
-    background: #FD6F00;
-    border-radius: 6px;
-    margin-left: -10px; 
-}
-.line>.circle{
-    width: 12px;
-    height: 12px;
-    background: #EDECEC;
-    border: 3px solid #FD6F00;
-    box-shadow: 0px 4px 7px rgba(0, 0, 0, 0.2);
-    box-sizing: border-box;
-    border-radius: 50%;
-    margin-left: -10px;
-}
-.react{
-    width: 30%;
-    height: 12px;
-    background: #FD6F00;
-    border-radius: 6px;
-    margin-left: -10px; 
-}
-.mobile{
-    width: 10%;
-    height: 12px;
-    background: #FD6F00;
-    border-radius: 6px;
-    margin-left: -10px;
-}
-@media (max-width: 576px) {
-    #aboutMe{
-        width: 100%;
-        height: fit-content;
-        padding-top: 50px;
+/*Celular*/
+@media (max-width: 767px) {
+    #About{
         flex-direction: column;
-        flex-wrap: nowrap;
+        gap: 10px;
     }
-    .carrusel-container{
-        width:100%;
-        height: 329px;
-    }
-    .carrusel-container>img{
-        margin: auto;
-        width: 3/4;
-        height: 100%;
-        object-fit: cover;
+    .pareja{
+        width: 100%;
     }
     .presentacion{
-        width: 95%;
-        height: fit-content;
-        margin: auto;
-    }
-    .presentacion p{
-        font-size: 15px;
-        line-height: 22px;
-        letter-spacing: 0.03em;
-    }
-    .presentacion >h4{
-        width: auto;
-        height: fit-content;
-        font-size: 40px;
-        color: #FFFFFF;
-    }
-    .skills{
-        width: 758px;
-        height: fit-content;
+        width: 100%;
     }
 }
