--- a/estilos/about.css
+++ b/estilos/about.css
@@ -3,7 +3,7 @@
     height: max-content;
     margin: 0 auto;
     display: flex;
-    flex-direction: row;
+    flex-direction: row-reverse;
     align-items: flex-start;
     gap: 50px;
 
@@ -34,9 +34,65 @@
     letter-spacing: 0.63px;
     text-align: justify;
 }
+.carde {
+  width: 100%;
+  background-color: #fff;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+}
+
+.header {
+  width: auto;
+  background-color: #FD6F00;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+  font-size: 18px;
+  border-radius: 10px 10px 0 0;
+}
+
+.body {
+  width: auto;
+  padding: 20px;
+}
+
+.skill {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.skill-name {
+  width:  clamp(50px, 50%, 120px);
+  font-size: 16px;
+}
+
+.skill-level {
+  width: 100%;
+  height: 10px;
+  background-color: #eee;
+  border-radius: 10px;
+  margin-left: 20px;
+}
+
+.skill-percent {
+  background-image: linear-gradient(to right, #FF8000, #FD6F00);
+  height: 100%;
+  transition: width 0.3s ease-in-out ;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+}
+
+.skill-percent-number {
+  margin-left: 20px;
+  font-size: 16px;
+  color: #3c3c3c;
+  font-weight: bold;
+}
 /*Celular*/
 @media (max-width: 767px) {
     #About{
+        height: 190vh;
         flex-direction: column;
         gap: 10px;
     }
