--- a/estilos/navegacion.css
+++ b/estilos/navegacion.css
@@ -45,6 +45,9 @@
   -moz-tap-highlight-color: transparent;
   -ms-tap-highlight-color: transparent;
 }
+.hamburger{
+  display: none;
+}
 
 .bar {
   width: 25px;
@@ -84,21 +87,69 @@
     justify-content: space-between;
     height: fit-content;
   }
-
+  
   #userName h1 {
     font-size: 1.4em;
   }
-
+  
   .menu {
     display: none;
     padding-top: 0;
+    opacity: 0; /* Configura la opacidad inicial del menú en 0 */
+    transition: opacity 0.5s ease;
   }
-
-  .burger-menu {
+  
+  .hamburger {
     display: block;
+    cursor: pointer;
+    z-index: 9999;
   }
-
+  
+  .hamburger input {
+    display: none;
+  }
+  
+  .hamburger svg {
+    /* The size of the SVG defines the overall size */
+    height: 3em;
+    /* Define the transition for transforming the SVG */
+    transition: transform 600ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  
+  .line {
+    fill: none;
+    stroke: white;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    stroke-width: 3;
+    /* Define the transition for transforming the Stroke */
+    transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
+      stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  
+  .line-top-bottom {
+    stroke-dasharray: 12 63;
+  }
+  
+  .hamburger input:checked + svg {
+    transform: rotate(-45deg);
+  }
+  
+  .hamburger input:checked + svg .line-top-bottom {
+    stroke-dasharray: 20 300;
+    stroke-dashoffset: -32.42;
+  }
+  .hamburger svg {
+    /* Los estilos anteriores para el icono de hamburguesa */
+    transition: transform 600ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  
+  .hamburger svg.active {
+    transform: rotate(-45deg);
+    transition: transform 600ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
   .active {
+    transition: transform 1000ms cubic-bezier(0.4, 0, 0.2, 1);
     width: 100%;
     height: 100vh;
     position: fixed;
@@ -114,8 +165,9 @@
     gap: 40px;
     z-index: 1;
     overflow-y: scroll;
+    opacity: 1;
   }
-
+  
   .menu li {
     width: 80%;
     height: 40px;
@@ -126,20 +178,21 @@
     line-height: 40px;
     transition: background-color 0.3s ease;
   }
-
+  
   .menu li:hover {
     background-color: #FD6F00;
     transform: scale(1.1);
   }
-  .menu li a:hover{
+  
+  .menu li a:hover {
     color: #333;
   }
-
+  
   .btn {
     width: 90%;
     height: 60px;
   }
-
+  
   .exit {
     display: block;
     position: absolute;
@@ -147,10 +200,12 @@
     right: 10%;
     cursor: pointer;
   }
-  svg{
+  
+  svg {
     color: #fff;
   }
-  svg:hover{
+  
+  svg:hover {
     transform: scale(1.1);
   }
 }
