--- a/estilos/navegacion.css
+++ b/estilos/navegacion.css
@@ -9,18 +9,21 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding: 10px;
-  position: fixed;
+  padding: 0px;
+  position:sticky;
   top: 0;
   z-index: 9;
   background-color: #1E1E1E;
+  margin: 0;
 }
 #nav h1{
   font-size: 28px;
   color: #fff;
+  margin: 0;
+  padding: 10px;
 }
 .menu {
-  width: 600px;
+  width: 616px;
   height: fit-content;
   padding-top: 0;;
   display: flex;
@@ -37,53 +40,96 @@
 .menu li a:hover{
   color: #FD6F00;
 }
-
-.burger-menu {
-  display: none;
-  cursor: pointer;
-  -webkit-tap-highlight-color: transparent;
-  -moz-tap-highlight-color: transparent;
-  -ms-tap-highlight-color: transparent;
+.menu li a:target{
+  color: #FD6F00;
 }
 .hamburger{
   display: none;
 }
 
-.bar {
-  width: 25px;
-  height: 3px;
-  background-color: #fff;
-  margin: 5px 0;
-}
-.btn{
-  width: auto;
-  height: 42px;
-  border-radius: 8px;
-  font-size: 18px;
-  cursor: pointer;
-}
-.btn {
-  width: 30%;
-  height: 40px;
-  background-color: #FD6F00;
+.menu> button {
+  width:fit-content;
+  height: fit-content;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  background: #1E1E1E;
+  font-family: "Montserrat", sans-serif;
+  box-shadow: 0px 6px 24px 0px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
   border: none;
-  border-radius: 30px;
-  color: #fff;
-  font-weight: bold;
-  font-size: 1.2em;
   cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.btn:hover {
-  background-color: #FDB600;
-}
-.exit{
-  display: none;
-}
+ }
+ 
+ .menu >button:after {
+  content: " ";
+  width: 0%;
+  height: 100%;
+  background: #FD6F00;
+  position: absolute;
+  transition: all 0.4s ease-in-out;
+  right: 0;
+ }
+ 
+ .menu>button:hover::after {
+  right: auto;
+  left: 0;
+  width: 100%;
+ }
+ 
+ .menu> button span {
+  text-align: center;
+  text-decoration: none;
+  width: 100%;
+  padding: 10px;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 700;
+  letter-spacing:0.2px;
+  z-index: 20;
+  transition: all 0.3s ease-in-out;
+ }
+ 
+ .menu >button:hover span {
+  color: #333;
+  animation: scaleUp 0.3s ease-in-out;
+ }
+ 
+ @keyframes scaleUp {
+  0% {
+   transform: scale(1);
+  }
+ 
+  50% {
+   transform: scale(0.95);
+  }
+ 
+  100% {
+   transform: scale(1);
+  }
+ }
 /* Estilos para teléfonos */
+@media (max-width:1024px) {
+  .menu {
+    margin: auto;
+    width: 716px;
+    height: fit-content;
+    padding-top: 0;;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    list-style-type: none;
+  }
+  .menu >Button{
+    width: 325px;
+  }
+}
 @media (max-width: 768px) {
   #nav {
+    width: 96%;
+    margin: 0;
     justify-content: space-between;
     height: fit-content;
   }
@@ -98,7 +144,16 @@
     opacity: 0; /* Configura la opacidad inicial del menú en 0 */
     transition: opacity 0.5s ease;
   }
+  .menu li a{
+    display: block;
+    padding: 15px 20px;
+  }
   
+  .menu> button {
+    width: 90%;
+    height: 60px;
+  }
+
   .hamburger {
     display: block;
     cursor: pointer;
@@ -149,13 +204,13 @@
     transition: transform 600ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   .active {
+    background-color: #333;
     transition: transform 1000ms cubic-bezier(0.4, 0, 0.2, 1);
     width: 100%;
     height: 100vh;
     position: fixed;
     top: 0;
     left: 0;
-    background-color: #222;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -164,15 +219,15 @@
     margin: 0;
     gap: 40px;
     z-index: 1;
-    overflow-y: scroll;
+    overflow: hidden;
     opacity: 1;
   }
   
   .menu li {
-    width: 80%;
-    height: 40px;
+    width: 90%;
+    height: auto;
     background-color: #333;
-    padding: 15px 20px;
+    padding: 0;
     opacity: 1;
     text-align: center;
     line-height: 40px;
@@ -188,31 +243,12 @@
     color: #333;
   }
   
-  .btn {
-    width: 90%;
-    height: 60px;
-  }
-  
-  .exit {
-    display: block;
-    position: absolute;
-    top: 6%;
-    right: 10%;
-    cursor: pointer;
-  }
-  
-  svg {
-    color: #fff;
-  }
-  
-  svg:hover {
-    transform: scale(1.1);
-  }
 }
 
 /* Estilos para tabletas */
 @media (min-width: 769px) and (max-width: 1024px) {
   #nav {
+    align-items: center ;
     justify-content: space-between;
     height: fit-content;
   }
@@ -220,12 +256,8 @@
   #userName h1 {
     font-size: 1.4em;
   }
-
-  .burger-menu {
-    display: none;
-  }
-
   .menu {
+    width: 80%;
     height: fit-content;
     display: flex;
     justify-content: space-around;
@@ -233,10 +265,10 @@
     gap: 10px;
   }
   .menu li {
-    width: 80%;
+    width: 100px;
     height: 40px;
     background-color: none;
-    padding: 0;
+    padding: 10px;
   }
   .menu li a {
     display: block;
@@ -249,23 +281,6 @@
   
   .menu li:hover a {
     color: #FD6F00;
-  }
-
-  .btn {
-    width: fit-content;
-    height: 40px;
-    background-color: #FD6F00;
-    border: none;
-    border-radius: 30px;
-    color: #fff;
-    padding: 0 15px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    font-size: 1em;
-  }
-
-  .btn:hover {
-    background-color: #FDB600;
   }
 }
 
